--- a/SzamlaRF.csproj
+++ b/SzamlaRF.csproj
@@ -184,9 +184,18 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.0" />
+    <PackageReference Include="Moq">
+      <Version>4.20.72</Version>
+    </PackageReference>
     <PackageReference Include="MSTest.TestAdapter" Version="3.1.0" />
     <PackageReference Include="MSTest.TestFramework" Version="3.1.0" />
+    <PackageReference Include="NUnit">
+      <Version>4.3.2</Version>
+    </PackageReference>
+    <PackageReference Include="NUnit3TestAdapter">
+      <Version>5.0.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AuthService.cs" />
@@ -197,9 +206,7 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="OrderDTO.cs" />
-    <Compile Include="ProductsForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="ProductsForm.cs" />
     <Compile Include="ProductsForm.Designer.cs">
       <DependentUpon>ProductsForm.cs</DependentUpon>
     </Compile>
